// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#components/Widgets/Input Tests Snapshot 1`] = `
<Input
  id="test"
  type="text"
  value=""
/>
`;

exports[`#components/Widgets/Input Tests Snapshot 2`] = `
<Input
  id="test"
  type="number"
  value=""
/>
`;

exports[`#components/Widgets/Input Tests Snapshot 3`] = `
<Input
  id="test"
  type="text"
  value=""
/>
`;

exports[`#components/Widgets/Input Tests Snapshot 4`] = `
<Input
  id="test"
  type="number"
  value=""
/>
`;
